--- a/angular.json
+++ b/angular.json
@@ -31,14 +31,22 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+
+               "src/assets",
+              "src/favicon.ico",
               {
                 "glob": "**/*",
                 "input": "public"
+
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
             ],
+
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -107,5 +115,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "448042d0-66ab-42cb-a712-1ca9daed19c7"
   }
 }
